--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-# Python cache
-__pycache__/
-*.pyc
-
-# Virtualenv
 .venv/
-
-# macOS crumbs
-.DS_Store
-
-# Local state / secrets
-falklands_state.json
+__pycache__/
 .env
+*.log
